# docs/swagger.json
@@ -185,6 +185,25 @@
                 "responses": {}
             }
         },
+        "/v1/workspace/all": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "[Workspace] {v1}"
+                ],
+                "responses": {}
+            }
+        },
         "/v1/workspace/{id}": {
             "get": {
                 "security": [
